feat(backend): wire advanced ranker, MMR + projection rebuild hooks (#437)
FollowRecommendationService now branches on
app.recommendations.follow.algorithm. Legacy path (default) is
unchanged. Advanced path pre-fetches the four per-request data sets:
PPR scores from PersonalizedPageRankService (gated via ObjectProvider so
sync.enabled=false keeps the bean absent and the PPR signal emits
ppr-unavailable), engagement aggregates from EngagementStatsService,
viewer-interaction set from ViewerInteractionRepository, and (only when
cold-start) popularity-by-major from PopularityByMajorCache. These flow
into the enriched FollowRecommendationContext so each FollowScoringSignal
is a pure lookup with no repository call inside the score loop.

After ranking + sort, the advanced path applies MMR to the top-K when
mmr.enabled=true. Diversity feature is a bag-of-labels float[] mined
from the shared-interest:* factors the signals already emit, and the
similarity function is Jaccard on those binary bits (cosine on binary
inputs differs only by normalisation; Jaccard reads more naturally for
label-set comparisons). Items whose MMR rank beats their relevance rank
get a 'diverse-pick' factor appended — defensively rebuilds the factor
list because the ranker hands back List.copyOf(...) which is immutable.

Hooks for the projection lifecycle:
- FollowGraphResyncJob.fullRebuild() now invokes projection.rebuildProjection()
  via ObjectProvider after re-emitting every edge, so PPR queries see
  the fresh node set without waiting for the 30-min @Scheduled refresh.
- FollowGraphBootstrap.bootstrapOnStartup() gets @Order(1) and the
  projection service's @EventListener gets @Order(2) so on a cold-start
  deploy bootstrap runs first; the projection then rebuilds (or
  idempotently re-rebuilds when bootstrap already triggered one through
  fullRebuild).

Test fixture updates:
- FollowRecommendationServiceTest passes legacy-shaped props + mocked
  ObjectProvider + real MmrReranker. One case ('fol