@@ -1,5 +1,6 @@
 package com.group7.backend.service;
 
+import com.group7.backend.config.FollowRecommendationProperties;
 import com.group7.backend.dto.response.FollowRecommendationResponse;
 import com.group7.backend.entity.Follow;
 import com.group7.backend.entity.FollowId;
@@ -9,7 +10,13 @@ import com.group7.backend.entity.User;
 import com.group7.backend.exception.ResourceNotFoundException;
 import com.group7.backend.repository.FollowRepository;
 import com.group7.backend.repository.UserRepository;
+import com.group7.backend.repository.ViewerInteractionRepository;
+import com.group7.backend.service.ranking.EngagementStatsService;
+import com.group7.backend.service.ranking.MmrReranker;
 import com.group7.backend.service.ranking.RuleBasedFollowRanker;
+import com.group7.backend.service.ranking.coldstart.PopularityByMajorCache;
+import com.group7.backend.service.ranking.graph.PersonalizedPageRankService;
+import org.springframework.beans.factory.ObjectProvider;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -53,6 +60,10 @@ class FollowRecommendationServiceTest {
 
     @Mock private UserRepository userRepository;
     @Mock private FollowRepository followRepository;
+    @Mock private EngagementStatsService engagementService;
+    @Mock private ViewerInteractionRepository viewerInteractionRepository;
+    @Mock private PopularityByMajorCache popularityCache;
+    @Mock private ObjectProvider<PersonalizedPageRankService> pprServiceProvider;
 
     private FollowRecommendationService service;
     private Pageable firstPage;
@@ -65,6 +76,12 @@ class FollowRecommendationServiceTest {
                 java.time.Clock.fixed(
                         java.time.Instant.parse("2026-05-12T00:00:00Z"),
                         java.time.ZoneOffset.UTC),
+                // algorithm=legacy → advanced beans are wired but the
+                // service branch never reaches into them.
+                legacyProps(),
+                engagementService, viewerInteractionRepository, popularityCache,
+                new MmrReranker(),
+                pprServiceProvider,
                 RANKING_WINDOW);
         firstPage = PageRequest.of(0, 20);
 
@@ -353,8 +370,10 @@ class FollowRecommendationServiceTest {
     void followeeFetchUsesMaxViewerFolloweesPageSize() {
         Mentee viewer = mentee(VIEWER_ID, List.of());
         when(userRepository.findById(VIEWER_ID)).thenReturn(Optional.of(viewer));
+        // Context build only runs when there ARE candidates to score —
+        // seed one so the followee fetch is reached.
         when(userRepository.findFollowRecommendationCandidates(eq(VIEWER_ID), any(java.time.OffsetDateTime.class), any(Pageable.class)))
-                .thenReturn(Collections.emptyList());
+                .thenReturn(List.of(mentor(2L, List.of())));
 
         service.recommend(VIEWER_ID, firstPage);
 
@@ -395,5 +414,21 @@ class FollowRecommendationServiceTest {
         Follow f = new Follow();
         f.setId(new FollowId(followerId, followeeId));
         return f;
+    }
+
+    /**
+     * algorithm=legacy is the active path under test — the orchestration
+     * branch never reaches into the advanced beans, but the props record
+     * must still be passed so the constructor signature compiles.
+     */
+    private static FollowRecommendationProperties legacyProps() {
+        return new FollowRecommendationProperties(
+                "legacy",
+                new FollowRecommendationProperties.Weights(0.10, 0.13, 0.22, 0.13, 0.12, 0.18, 0.12),
+                new FollowRecommendationProperties.Signals(true, true, true, true, true, false, true),
+                new FollowRecommendationProperties.Ppr(0.85, 20, 2000, 10, 30),
+                new FollowRecommendationProperties.Mmr(true, 0.65, 20, 10),
+                new FollowRecommendationProperties.Engagement(30, 14, 1.0, 3.0, 4.0),
+                new FollowRecommendationProperties.ColdStart(90, 64, 30, 0.6, 0.4));
     }
 }
